--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,10 @@ org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-# Kotlin code style for this project: "official" or "obsolete":
-kotlin.code.style=official
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystoregit
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
 MYAPP_UPLOAD_STORE_PASSWORD=123456
 MYAPP_UPLOAD_KEY_PASSWORD=123456
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
+
