--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    signingConfigs{
-        config{
-            if(project.hasProperty('MYAPP_UPLOAD_STORE_FILE')){
+    signingConfigs {
+        config {
+            if (Project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
                 storeFile file(MYAPP_UPLOAD_STORE_FILE)
                 storePassword MYAPP_UPLOAD_STORE_PASSWORD
                 keyalias MYAPP_UPLOAD_KEY_ALIAS
